--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -331,7 +331,7 @@ input, select, textarea {
 	hr {
 		border-bottom-color: rgba(255, 255, 255, 0.35);
 	}
-
+	
 /* Row */
 
 	.row {
@@ -817,7 +817,10 @@ input, select, textarea {
 						.row.gtr-200.gtr-uniform > * {
 							padding-top: 3em;
 						}
-
+			.h_iframe iframe {
+				width: 1080px;
+				height: 640px;
+			}
 		}
 
 		@media screen and (max-width: 1280px) {
@@ -1062,7 +1065,10 @@ input, select, textarea {
 						.row.gtr-200.gtr-uniform > * {
 							padding-top: 3em;
 						}
-
+			.h_iframe iframe {
+				width: 1080px;
+				height: 640px;
+			}
 		}
 
 		@media screen and (max-width: 980px) {
@@ -1307,7 +1313,10 @@ input, select, textarea {
 						.row.gtr-200.gtr-uniform > * {
 							padding-top: 3em;
 						}
-
+			.h_iframe iframe {
+				width: 100%;
+				height: 100%;
+			}
 		}
 
 		@media screen and (max-width: 736px) {
@@ -1552,7 +1561,10 @@ input, select, textarea {
 						.row.gtr-200.gtr-uniform > * {
 							padding-top: 2em;
 						}
-
+			.h_iframe iframe {
+				width: 100%;
+				height: 100%;
+			}
 		}
 
 		@media screen and (max-width: 480px) {
@@ -1797,7 +1809,10 @@ input, select, textarea {
 						.row.gtr-200.gtr-uniform > * {
 							padding-top: 2.5em;
 						}
-
+			.h_iframe iframe {
+				width: 100%;
+				height: 100%;
+			}
 		}
 
 /* Box */
